--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,19 @@
 {
-    "arrowParens": "avoid",
-    "endOfLine": "auto",
-    "printWidth": 100,
-    "semi": true,
-    "singleQuote": true,
-    "tabWidth": 4,
-    "trailingComma": "es5",
-    "useTabs": false
+	"arrowParens": "avoid",
+	"endOfLine": "lf",
+	"jsxSingleQuote": true,
+	"overrides": [
+		{
+			"files": "*.json",
+			"options": {
+				"singleQuote": false
+			}
+		}
+	],
+	"printWidth": 100,
+	"semi": true,
+	"singleQuote": true,
+	"tabWidth": 4,
+	"trailingComma": "es5",
+	"useTabs": true
 }
